remove data race and add readme

--- a/philo/Makefile
+++ b/philo/Makefile
@@ -21,7 +21,8 @@ FILES = \
 	supervisor.c \
 	main.c
 
-CFLAGS =  -Wall -Wextra -Werror
+# -fsanitize=thread -lpthread
+CFLAGS =  -Wall -Wextra -Werror  
 DEPFLAGS = -MMD -MF $(@:.o=.d)
 
 NAME = philo
